--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-easy-crop": "^5.4.1",
     "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.3",
+    "react-number-format": "^5.4.4",
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
